# playground

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
bash/install/: ubuntu.sh
cpp/: CMakeLists.txt
cpp/fmt/: CMakeLists.txt  main.c
cpp/pwd/: CMakeLists.txt  main.cpp
cpp/timer/: CMakeLists.txt  main.c
python/jupyter/: playground.ipynb
